--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+# Ignore the schema
+/db/schema.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
